tianshu_core/mamba/mamba/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    KEYWORD
    NEWLINE

Grammar

Rule 0     S' -> statement_list
Rule 1     statement_list -> statement
Rule 2     statement_list -> statement_list statement
Rule 3     statement -> identifier
Rule 4     statement -> expression
Rule 5     statement -> if_statement
Rule 6     identifier -> IDENTIFIER
Rule 7     statement -> EXIT STMT_END
Rule 8     primitive -> NUM_INT
Rule 9     primitive -> NUM_FLOAT
Rule 10    primitive -> STRING
Rule 11    primitive -> boolean
Rule 12    expression -> expression PLUS expression
Rule 13    expression -> expression MINUS expression
Rule 14    expression -> expression MUL expression
Rule 15    expression -> expression DIV expression
Rule 16    expression -> expression EXP expression
Rule 17    expression -> expression MOD expression
Rule 18    expression -> expression BIT_AND expression
Rule 19    expression -> expression BIT_OR expression
Rule 20    expression -> expression BIT_XOR expression
Rule 21    expression -> expression LSHIFT expression
Rule 22    expression -> expression RSHIFT expression
Rule 23    boolean -> expression EQ expression
Rule 24    boolean -> expression NEQ expression
Rule 25    boolean -> expression GT expression
Rule 26    boolean -> expression GTE expression
Rule 27    boolean -> expression LT expression
Rule 28    boolean -> expression LTE expression
Rule 29    boolean -> expression AND expression
Rule 30    boolean -> expression OR expression
Rule 31    expression -> MINUS expression
Rule 32    expression -> PLUS expression
Rule 33    expression -> BIT_NEG expression
Rule 34    expression -> NOT expression
Rule 35    expression -> LPAREN expression RPAREN
Rule 36    boolean -> TRUE
Rule 37    boolean -> FALSE
Rule 38    assignable -> primitive
Rule 39    assignable -> expression
Rule 40    arguments -> arguments COMMA expression
Rule 41    arguments -> expression
Rule 42    arguments -> <empty>
Rule 43    expression -> expression QUESTION_MARK expression COLON expression
Rule 44    expression -> LSQBRACK arguments RSQBRACK
Rule 45    expression -> identifier LSQBRACK expression RSQBRACK
Rule 46    expression -> identifier LSQBRACK expression COLON expression RSQBRACK
Rule 47    expression -> identifier LSQBRACK COLON expression RSQBRACK
Rule 48    expression -> identifier LSQBRACK expression COLON RSQBRACK
Rule 49    expression -> identifier LSQBRACK COLON RSQBRACK
Rule 50    statement -> identifier LSQBRACK expression RSQBRACK EQUALS expression STMT_END
Rule 51    expression -> identifier EQUALS assignable STMT_END
Rule 52    if_statement -> IF expression LBRACK statement_list RBRACK
Rule 53    if_statement -> IF expression LBRACK statement_list RBRACK ELSE LBRACK statement_list RBRACK
Rule 54    if_statement -> IF expression LBRACK statement_list RBRACK ELSE if_statement
Rule 55    expression -> expression IN expression
Rule 56    expression -> expression NOT IN expression
Rule 57    statement -> PRINT arguments STMT_END
Rule 58    statement -> identifier PLUS_EQ expression STMT_END
Rule 59    statement -> identifier MINUS_EQ expression STMT_END
Rule 60    statement -> identifier MUL_EQ expression STMT_END
Rule 61    statement -> identifier DIV_EQ expression STMT_END
Rule 62    statement -> identifier EXP_EQ expression STMT_END
Rule 63    statement -> identifier MOD_EQ expression STMT_END
Rule 64    expression -> identifier DOUBLE_PLUS
Rule 65    expression -> identifier DOUBLE_MINUS
Rule 66    expression -> primitive
Rule 67    expression -> STRING
Rule 68    expression -> identifier
Rule 69    statement -> FOR identifier IN expression ARROW_LTR expression LBRACK statement_list RBRACK
Rule 70    statement -> FOR identifier IN expression ARROW_RTL expression LBRACK statement_list RBRACK
Rule 71    statement -> FOR identifier IN expression LBRACK statement_list RBRACK
Rule 72    statement -> WHILE expression LBRACK statement_list RBRACK
Rule 73    statement -> FOR LBRACK statement_list RBRACK
Rule 74    statement -> FUNCTION identifier LPAREN arguments RPAREN LBRACK statement_list RBRACK
Rule 75    statement -> FUNCTION identifier LBRACK statement_list RBRACK
Rule 76    statement -> RETURN expression STMT_END
Rule 77    expression -> identifier LPAREN arguments RPAREN
Rule 78    statement -> identifier LPAREN arguments RPAREN STMT_END

Terminals, with rules where they appear

AND                  : 29
ARROW_LTR            : 69
ARROW_RTL            : 70
BIT_AND              : 18
BIT_NEG              : 33
BIT_OR               : 19
BIT_XOR              : 20
COLON                : 43 46 47 48 49
COMMA                : 40
DIV                  : 15
DIV_EQ               : 61
DOUBLE_MINUS         : 65
DOUBLE_PLUS          : 64
ELSE                 : 53 54
EQ                   : 23
EQUALS               : 50 51
EXIT                 : 7
EXP                  : 16
EXP_EQ               : 62
FALSE                : 37
FOR                  : 69 70 71 73
FUNCTION             : 74 75
GT                   : 25
GTE                  : 26
IDENTIFIER           : 6
IF                   : 52 53 54
IN                   : 55 56 69 70 71
KEYWORD              : 
LBRACK               : 52 53 53 54 69 70 71 72 73 74 75
LPAREN               : 35 74 77 78
LSHIFT               : 21
LSQBRACK             : 44 45 46 47 48 49 50
LT                   : 27
LTE                  : 28
MINUS                : 13 31
MINUS_EQ             : 59
MOD                  : 17
MOD_EQ               : 63
MUL                  : 14
MUL_EQ               : 60
NEQ                  : 24
NEWLINE              : 
NOT                  : 34 56
NUM_FLOAT            : 9
NUM_INT              : 8
OR                   : 30
PLUS                 : 12 32
PLUS_EQ              : 58
PRINT                : 57
QUESTION_MARK        : 43
RBRACK               : 52 53 53 54 69 70 71 72 73 74 75
RETURN               : 76
RPAREN               : 35 74 77 78
RSHIFT               : 22
RSQBRACK             : 44 45 46 47 48 49 50
STMT_END             : 7 50 51 57 58 59 60 61 62 63 76 78
STRING               : 10 67
TRUE                 : 36
WHILE                : 72
error                : 

Nonterminals, with rules where they appear

arguments            : 40 44 57 74 77 78
assignable           : 51
boolean              : 11
expression           : 4 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 32 33 34 35 39 40 41 43 43 43 45 46 46 47 48 50 50 52 53 54 55 55 56 56 58 59 60 61 62 63 69 69 70 70 71 72 76
identifier           : 3 45 46 47 48 49 50 51 58 59 60 61 62 63 64 65 68 69 70 71 74 75 77 78
if_statement         : 5 54
primitive            : 38 66
statement            : 1 2
statement_list       : 2 52 53 53 54 69 70 71 72 73 74 75 0

Parsing method: LALR

state 0

    (0) S' -> . statement_list
    (1) statement_list -> . statement
    (2) statement_list -> . statement_list statement
    (3) statement -> . identifier
    (4) statement -> . expression
    (5) statement -> . if_statement
    (7) statement -> . EXIT STMT_END
    (50) statement -> . identifier LSQBRACK expression RSQBRACK EQUALS expression STMT_END
    (57) statement -> . PRINT arguments STMT_END
    (58) statement -> . identifier PLUS_EQ expression STMT_END
    (59) statement -> . identifier MINUS_EQ expression STMT_END
    (60) statement -> . identifier MUL_EQ expression STMT_END
    (61) statement -> . identifier DIV_EQ expression STMT_END
    (62) statement -> . identifier EXP_EQ expression STMT_END
    (63) statement -> . identifier MOD_EQ expression STMT_END
    (69) statement -> . FOR identifier IN expression ARROW_LTR expression LBRACK statement_list RBRACK
    (70) statement -> . FOR identifier IN expression ARROW_RTL expression LBRACK statement_list RBRACK
    (71) statement -> . FOR identifier IN expression LBRACK statement_list RBRACK
    (72) statement -> . WHILE expression LBRACK statement_list RBRACK
    (73) statement -> . FOR LBRACK statement_list RBRACK
    (74) statement -> . FUNCTION identifier LPAREN arguments RPAREN LBRACK statement_list RBRACK
    (75) statement -> . FUNCTION identifier LBRACK statement_list RBRACK
    (76) statement -> . RETURN expression STMT_END
    (78) statement -> . identifier LPAREN arguments RPAREN STMT_END
    (6) identifier -> . IDENTIFIER
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression MUL expression
    (15) expression -> . expression DIV expression
    (16) expression -> . expression EXP expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression BIT_AND expression
    (19) expression -> . expression BIT_OR expression
    (20) expression -> . expression BIT_XOR expression
    (21) expression -> . expression LSHIFT expression
    (22) expression -> . expression RSHIFT expression
    (31) expression -> . MINUS expression
    (32) expression -> . PLUS expression
    (33) expression -> . BIT_NEG expression
    (34) expression -> . NOT expression
    (35) expression -> . LPAREN expression RPAREN
    (43) expression -> . expression QUESTION_MARK expression COLON expression
    (44) expression -> . LSQBRACK arguments RSQBRACK
    (45) expression -> . identifier LSQBRACK expression RSQBRACK
    (46) expression -> . identifier LSQBRACK expression COLON expression RSQBRACK
    (47) expression -> . identifier LSQBRACK COLON expression RSQBRACK
    (48) expression -> . identifier LSQBRACK expression COLON RSQBRACK
    (49) expression -> . identifier LSQBRACK COLON RSQBRACK
    (51) expression -> . identifier EQUALS assignable STMT_END
    (55) expression -> . expression IN expression
    (56) expression -> . expression NOT IN expression
    (64) expression -> . identifier DOUBLE_PLUS
    (65) expression -> . identifier DOUBLE_MINUS
    (66) expression -> . primitive
    (67) expression -> . STRING
    (68) expression -> . identifier
    (77) expression -> . identifier LPAREN arguments RPAREN
    (52) if_statement -> . IF expression LBRACK statement_list RBRACK
    (53) if_statement -> . IF expression LBRACK statement_list RBRACK ELSE LBRACK statement_list RBRACK
    (54) if_statement -> . IF expression LBRACK statement_list RBRACK ELSE if_statement
    (8) primitive -> . NUM_INT
    (9) primitive -> . NUM_FLOAT
    (10) primitive -> . STRING
    (11) primitive -> . boolean
    (23) boolean -> . expression EQ expression
    (24) boolean -> . expression NEQ expression
    (25) boolean -> . expression GT expression
    (26) boolean -> . expression GTE expression
    (27) boolean -> . expression LT expression
    (28) boolean -> . expression LTE expression
    (29) boolean -> . expression AND expression
    (30) boolean -> . expression OR expression
    (36) boolean -> . TRUE
    (37) boolean -> . FALSE

    EXIT            shift and go to state 6
    PRINT           shift and go to state 8
    FOR             shift and go to state 9
    WHILE           shift and go to state 10
    FUNCTION        shift and go to state 11
    RETURN          shift and go to state 13
    IDENTIFIER      shift and go to state 14
    MINUS           shift and go to state 16
    PLUS            shift and go to state 15
    BIT_NEG         shift and go to state 17
    NOT             shift and go to state 18
    LPAREN          shift and go to state 12
    LSQBRACK        shift and go to state 7
    STRING          shift and go to state 20
    IF              shift and go to state 21
    NUM_INT         shift and go to state 22
    NUM_FLOAT       shift and go to state 23
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26

    statement_list                 shift and go to state 1
    statement                      shift and go to state 2
    identifier                     shift and go to state 3
    expression                     shift and go to state 4
    if_statement                   shift and go to state 5
    primitive                      shift and go to state 19
    boolean                        shift and go to state 24

state 1

    (0) S' -> statement_list .
    (2) statement_list -> statement_list . statement
    (3) statement -> . identifier
    (4) statement -> . expression
    (5) statement -> . if_statement
    (7) statement -> . EXIT STMT_END
    (50) statement -> . identifier LSQBRACK expression RSQBRACK EQUALS expression STMT_END
    (57) statement -> . PRINT arguments STMT_END
    (58) statement -> . identifier PLUS_EQ expression STMT_END
    (59) statement -> . identifier MINUS_EQ expression STMT_END
    (60) statement -> . identifier MUL_EQ expression STMT_END
    (61) statement -> . identifier DIV_EQ expression STMT_END
    (62) statement -> . identifier EXP_EQ expression STMT_END
    (63) statement -> . identifier MOD_EQ expression STMT_END
    (69) statement -> . FOR identifier IN expression ARROW_LTR expression LBRACK statement_list RBRACK
    (70) statement -> . FOR identifier IN expression ARROW_RTL expression LBRACK statement_list RBRACK
    (71) statement -> . FOR identifier IN expression LBRACK statement_list RBRACK
    (72) statement -> . WHILE expression LBRACK statement_list RBRACK
    (73) statement -> . FOR LBRACK statement_list RBRACK
    (74) statement -> . FUNCTION identifier LPAREN arguments RPAREN LBRACK statement_list RBRACK
    (75) statement -> . FUNCTION identifier LBRACK statement_list RBRACK
    (76) statement -> . RETURN expression STMT_END
    (78) statement -> . identifier LPAREN arguments RPAREN STMT_END
    (6) identifier -> . IDENTIFIER
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression MUL expression
    (15) expression -> . expression DIV expression
    (16) expression -> . expression EXP expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression BIT_AND expression
    (19) expression -> . expression BIT_OR expression
    (20) expression -> . expression BIT_XOR expression
    (21) expression -> . expression LSHIFT expression
    (22) expression -> . expression RSHIFT expression
    (31) expression -> . MINUS expression
    (32) expression -> . PLUS expression
    (33) expression -> . BIT_NEG expression
    (34) expression -> . NOT expression
    (35) expression -> . LPAREN expression RPAREN
    (43) expression -> . expression QUESTION_MARK expression COLON expression
    (44) expression -> . LSQBRACK arguments RSQBRACK
    (45) expression -> . identifier LSQBRACK expression RSQBRACK
    (46) expression -> . identifier LSQBRACK expression COLON expression RSQBRACK
    (47) expression -> . identifier LSQBRACK COLON expression RSQBRACK
    (48) expression -> . identifier LSQBRACK expression COLON RSQBRACK
    (49) expression -> . identifier LSQBRACK COLON RSQBRACK
    (51) expression -> . identifier EQUALS assignable STMT_END
    (55) expression -> . expression IN expression
    (56) expression -> . expression NOT IN expression
    (64) expression -> . identifier DOUBLE_PLUS
    (65) expression -> . identifier DOUBLE_MINUS
    (66) expression -> . primitive
    (67) expression -> . STRING
    (68) expression -> . identifier
    (77) expression -> . identifier LPAREN arguments RPAREN
    (52) if_statement -> . IF expression LBRACK statement_list RBRACK
    (53) if_statement -> . IF expression LBRACK statement_list RBRACK ELSE LBRACK statement_list RBRACK
    (54) if_statement -> . IF expression LBRACK statement_list RBRACK ELSE if_statement
    (8) primitive -> . NUM_INT
    (9) primitive -> . NUM_FLOAT
    (10) primitive -> . STRING
    (11) primitive -> . boolean
    (23) boolean -> . expression EQ expression
    (24) boolean -> . expression NEQ expression
    (25) boolean -> . expression GT expression
    (26) boolean -> . expression GTE expression
    (27) boolean -> . expression LT expression
    (28) boolean -> . expression LTE expression
    (29) boolean -> . expression AND expression
    (30) boolean -> . expression OR expression
    (36) boolean -> . TRUE
    (37) boolean -> . FALSE

    EXIT            shift and go to state 6
    PRINT           shift and go to state 8
    FOR             shift and go to state 9
    WHILE           shift and go to state 10
    FUNCTION        shift and go to state 11
    RETURN          shift and go to state 13
    IDENTIFIER      shift and go to state 14
    MINUS           shift and go to state 16
    PLUS            shift and go to state 15
    BIT_NEG         shift and go to state 17
    NOT             shift and go to state 18
    LPAREN          shift and go to state 12
    LSQBRACK        shift and go to state 7
    STRING          shift and go to state 20
    IF              shift and go to state 21
    NUM_INT         shift and go to state 22
    NUM_FLOAT       shift and go to state 23
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26

    statement                      shift and go to state 27
    identifier                     shift and go to state 3
    expression                     shift and go to state 4
    if_statement                   shift and go to state 5
    primitive                      shift and go to state 19
    boolean                        shift and go to state 24

state 2

    (1) statement_list -> statement .

    EXIT            reduce using rule 1 (statement_list -> statement .)
    PRINT           reduce using rule 1 (statement_list -> statement .)
    FOR             reduce using rule 1 (statement_list -> statement .)
    WHILE           reduce using rule 1 (statement_list -> statement .)
    FUNCTION        reduce using rule 1 (statement_list -> statement .)
    RETURN          reduce using rule 1 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 1 (statement_list -> statement .)
    MINUS           reduce using rule 1 (statement_list -> statement .)
    PLUS            reduce using rule 1 (statement_list -> statement .)
    BIT_NEG         reduce using rule 1 (statement_list -> statement .)
    NOT             reduce using rule 1 (statement_list -> statement .)
    LPAREN          reduce using rule 1 (statement_list -> statement .)
    LSQBRACK        reduce using rule 1 (statement_list -> statement .)
    STRING          reduce using rule 1 (statement_list -> statement .)
    IF              reduce using rule 1 (statement_list -> statement .)
    NUM_INT         reduce using rule 1 (statement_list -> statement .)
    NUM_FLOAT       reduce using rule 1 (statement_list -> statement .)
    TRUE            reduce using rule 1 (statement_list -> statement .)
    FALSE           reduce using rule 1 (statement_list -> statement .)
    $end            reduce using rule 1 (statement_list -> statement .)
    RBRACK          reduce using rule 1 (statement_list -> statement .)


state 3

    (3) statement -> identifier .
    (50) statement -> identifier . LSQBRACK expression RSQBRACK EQUALS expression STMT_END
    (58) statement -> identifier . PLUS_EQ expression STMT_END
    (59) statement -> identifier . MINUS_EQ expression STMT_END
    (60) statement -> identifier . MUL_EQ expression STMT_END
    (61) statement -> identifier . DIV_EQ expression STMT_END
    (62) statement -> identifier . EXP_EQ expression STMT_END
    (63) statement -> identifier . MOD_EQ expression STMT_END
    (78) statement -> identifier . LPAREN arguments RPAREN STMT_END
    (45) expression -> identifier . LSQBRACK expression RSQBRACK
    (46) expression -> identifier . LSQBRACK expression COLON expression RSQBRACK
    (47) expression -> identifier . LSQBRACK COLON expression RSQBRACK
    (48) expression -> identifier . LSQBRACK expression COLON RSQBRACK
    (49) expression -> identifier . LSQBRACK COLON RSQBRACK
    (51) expression -> identifier . EQUALS assignable STMT_END
    (64) expression -> identifier . DOUBLE_PLUS
    (65) expression -> identifier . DOUBLE_MINUS
    (68) expression -> identifier .
    (77) expression -> identifier . LPAREN arguments RPAREN

  ! shift/reduce conflict for LSQBRACK resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! reduce/reduce conflict for PLUS resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for MINUS resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for NOT resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for EXIT resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for PRINT resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for FOR resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for WHILE resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for FUNCTION resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for RETURN resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for IDENTIFIER resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for BIT_NEG resolved using rule 3 (statement -> identifier .)
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for LSQBRACK resolved as shift
  ! reduce/reduce conflict for STRING resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for IF resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for NUM_INT resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for NUM_FLOAT resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for TRUE resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for FALSE resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for $end resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for RBRACK resolved using rule 3 (statement -> identifier .)
    EXIT            reduce using rule 3 (statement -> identifier .)
    PRINT           reduce using rule 3 (statement -> identifier .)
    FOR             reduce using rule 3 (statement -> identifier .)
    WHILE           reduce using rule 3 (statement -> identifier .)
    FUNCTION        reduce using rule 3 (statement -> identifier .)
    RETURN          reduce using rule 3 (statement -> identifier .)
    IDENTIFIER      reduce using rule 3 (statement -> identifier .)
    MINUS           reduce using rule 3 (statement -> identifier .)
    PLUS            reduce using rule 3 (statement -> identifier .)
    BIT_NEG         reduce using rule 3 (statement -> identifier .)
    NOT             reduce using rule 3 (statement -> identifier .)
    STRING          reduce using rule 3 (statement -> identifier .)
    IF              reduce using rule 3 (statement -> identifier .)
    NUM_INT         reduce using rule 3 (statement -> identifier .)
    NUM_FLOAT       reduce using rule 3 (statement -> identifier .)
    TRUE            reduce using rule 3 (statement -> identifier .)
    FALSE           reduce using rule 3 (statement -> identifier .)
    $end            reduce using rule 3 (statement -> identifier .)
    RBRACK          reduce using rule 3 (statement -> identifier .)
    LSQBRACK        shift and go to state 28
    PLUS_EQ         shift and go to state 30
    MINUS_EQ        shift and go to state 31
    MUL_EQ          shift and go to state 32
    DIV_EQ          shift and go to state 33
    EXP_EQ          shift and go to state 34
    MOD_EQ          shift and go to state 35
    LPAREN          shift and go to state 36
    EQUALS          shift and go to state 29
    DOUBLE_PLUS     shift and go to state 37
    DOUBLE_MINUS    shift and go to state 38
    MUL             reduce using rule 68 (expression -> identifier .)
    DIV             reduce using rule 68 (expression -> identifier .)
    EXP             reduce using rule 68 (expression -> identifier .)
    MOD             reduce using rule 68 (expression -> identifier .)
    BIT_AND         reduce using rule 68 (expression -> identifier .)
    BIT_OR          reduce using rule 68 (expression -> identifier .)
    BIT_XOR         reduce using rule 68 (expression -> identifier .)
    LSHIFT          reduce using rule 68 (expression -> identifier .)
    RSHIFT          reduce using rule 68 (expression -> identifier .)
    QUESTION_MARK   reduce using rule 68 (expression -> identifier .)
    IN              reduce using rule 68 (expression -> identifier .)
    EQ              reduce using rule 68 (expression -> identifier .)
    NEQ             reduce using rule 68 (expression -> identifier .)
    GT              reduce using rule 68 (expression -> identifier .)
    GTE             reduce using rule 68 (expression -> identifier .)
    LT              reduce using rule 68 (expression -> identifier .)
    LTE             reduce using rule 68 (expression -> identifier .)
    AND             reduce using rule 68 (expression -> identifier .)
    OR              reduce using rule 68 (expression -> identifier .)

  ! LPAREN          [ reduce using rule 3 (statement -> identifier .) ]
  ! LSQBRACK        [ reduce using rule 3 (statement -> identifier .) ]
  ! PLUS            [ reduce using rule 68 (expression -> identifier .) ]
  ! MINUS           [ reduce using rule 68 (expression -> identifier .) ]
  ! NOT             [ reduce using rule 68 (expression -> identifier .) ]
  ! EXIT            [ reduce using rule 68 (expression -> identifier .) ]
  ! PRINT           [ reduce using rule 68 (expression -> identifier .) ]
  ! FOR             [ reduce using rule 68 (expression -> identifier .) ]
  ! WHILE           [ reduce using rule 68 (expression -> identifier .) ]
  ! FUNCTION        [ reduce using rule 68 (expression -> identifier .) ]
  ! RETURN          [ reduce using rule 68 (expression -> identifier .) ]
  ! IDENTIFIER      [ reduce using rule 68 (expression -> identifier .) ]
  ! BIT_NEG         [ reduce using rule 68 (expression -> identifier .) ]
  ! LPAREN          [ reduce using rule 68 (expression -> identifier .) ]
  ! LSQBRACK        [ reduce using rule 68 (expression -> identifier .) ]
  ! STRING          [ reduce using rule 68 (expression -> identifier .) ]
  ! IF              [ reduce using rule 68 (expression -> identifier .) ]
  ! NUM_INT         [ reduce using rule 68 (expression -> identifier .) ]
  ! NUM_FLOAT       [ reduce using rule 68 (expression -> identifier .) ]
  ! TRUE            [ reduce using rule 68 (expression -> identifier .) ]
  ! FALSE           [ reduce using rule 68 (expression -> identifier .) ]
  ! $end            [ reduce using rule 68 (expression -> identifier .) ]
  ! RBRACK          [ reduce using rule 68 (expression -> identifier .) ]


state 4

    (4) statement -> expression .
    (12) expression -> expression . PLUS expression
    (13) expression -> expression . MINUS expression
    (14) expression -> expression . MUL expression
    (15) expression -> expression . DIV expression
    (16) expression -> expression . EXP expression
    (17) expression -> expression . MOD expression
    (18) expression -> expression . BIT_AND expression
    (19) expression -> expression . BIT_OR expression
    (20) expression -> expression . BIT_XOR expression
    (21) expression -> expression . LSHIFT expression
    (22) expression -> expression . RSHIFT expression
    (43) expression -> expression . QUESTION_MARK expression COLON expression
    (55) expression -> expression . IN expression
    (56) expression -> expression . NOT IN expression
    (23) boolean -> expression . EQ expression
    (24) boolean -> expression . NEQ expression
    (25) boolean -> expression . GT expression
    (26) boolean -> expression . GTE expression
    (27) boolean -> expression . LT expression
    (28) boolean -> expression . LTE expression
    (29) boolean -> expression . AND expression
    (30) boolean -> expression . OR expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
    EXIT            reduce using rule 4 (statement -> expression .)
    PRINT           reduce using rule 4 (statement -> expression .)
    FOR             reduce using rule 4 (statement -> expression .)
    WHILE           reduce using rule 4 (statement -> expression .)
    FUNCTION        reduce using rule 4 (statement -> expression .)
    RETURN          reduce using rule 4 (statement -> expression .)
    IDENTIFIER      reduce using rule 4 (statement -> expression .)
    BIT_NEG         reduce using rule 4 (statement -> expression .)
    LPAREN          reduce using rule 4 (statement -> expression .)
    LSQBRACK        reduce using rule 4 (statement -> expression .)
    STRING          reduce using rule 4 (statement -> expression .)
    IF              reduce using rule 4 (statement -> expression .)
    NUM_INT         reduce using rule 4 (statement -> expression .)
    NUM_FLOAT       reduce using rule 4 (statement -> expression .)
    TRUE            reduce using rule 4 (statement -> expression .)
    FALSE           reduce using rule 4 (statement -> expression .)
    $end            reduce using rule 4 (statement -> expression .)
    RBRACK          reduce using rule 4 (statement -> expression .)
    PLUS            shift and go to state 39
    MINUS           shift and go to state 40
    MUL             shift and go to state 41
    DIV             shift and go to state 42
    EXP             shift and go to state 43
    MOD             shift and go to state 44
    BIT_AND         shift and go to state 45
    BIT_OR          shift and go to state 46
    BIT_XOR         shift and go to state 47
    LSHIFT          shift and go to state 48
    RSHIFT          shift and go to state 49
    QUESTION_MARK   shift and go to state 50
    IN              shift and go to state 51
    NOT             shift and go to state 52
    EQ              shift and go to state 53
    NEQ             shift and go to state 54
    GT              shift and go to state 55
    GTE             shift and go to state 56
    LT              shift and go to state 57
    LTE             shift and go to state 58
    AND             shift and go to state 59
    OR              shift and go to state 60

  ! MINUS           [ reduce using rule 4 (statement -> expression .) ]
  ! PLUS            [ reduce using rule 4 (statement -> expression .) ]
  ! NOT             [ reduce using rule 4 (statement -> expression .) ]


state 5

    (5) statement -> if_statement .

    EXIT            reduce using rule 5 (statement -> if_statement .)
    PRINT           reduce using rule 5 (statement -> if_statement .)
    FOR             reduce using rule 5 (statement -> if_statement .)
    WHILE           reduce using rule 5 (statement -> if_statement .)
    FUNCTION        reduce using rule 5 (statement -> if_statement .)
    RETURN          reduce using rule 5 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 5 (statement -> if_statement .)
    MINUS           reduce using rule 5 (statement -> if_statement .)
    PLUS            reduce using rule 5 (statement -> if_statement .)
    BIT_NEG         reduce using rule 5 (statement -> if_statement .)
    NOT             reduce using rule 5 (statement -> if_statement .)
    LPAREN          reduce using rule 5 (statement -> if_statement .)
    LSQBRACK        reduce using rule 5 (statement -> if_statement .)
    STRING          reduce using rule 5 (statement -> if_statement .)
    IF              reduce using rule 5 (statement -> if_statement .)
    NUM_INT         reduce using rule 5 (statement -> if_statement .)
    NUM_FLOAT       reduce using rule 5 (statement -> if_statement .)
    TRUE            reduce using rule 5 (statement -> if_statement .)
    FALSE           reduce using rule 5 (statement -> if_statement .)
    $end            reduce using rule 5 (statement -> if_statement .)
    RBRACK          reduce using rule 5 (statement -> if_statement .)


state 6

    (7) statement -> EXIT . STMT_END

    STMT_END        shift and go to state 61


state 7

    (44) expression -> LSQBRACK . arguments RSQBRACK
    (40) arguments -> . arguments COMMA expression
    (41) arguments -> . expression
    (42) arguments -> .
    (12) expression -> . expression PLUS expression
    (13) expression -> . expression MINUS expression
    (14) expression -> . expression MUL expression
    (15) expression -> . expression DIV expression
    (16) expression -> . expression EXP expression
    (17) expression -> . expression MOD expression
    (18) expression -> . expression BIT_AND expression
    (19) expression -> . expression BIT_OR expression
    (20) expression -> . expression BIT_XOR expression
    (21) expression -> . expression LSHIFT expression
    (22) expression -> . expression RSHIFT expression
    (31) expression -> . MINUS expression
    (32) expression -> . PLUS expression
    (33) expression -> . BIT_NEG expression
    (34) expression -> . NOT expression
    (35) expression -> . LPAREN expression RPAREN
    (43) expression -> . expression QUESTION_MARK expression COLON expression
    (44) expression -> . LSQBRACK arguments RSQBRACK
    (45) expression -> . identifier LSQBRACK expression RSQBRACK
    (46) expression -> . identifier LSQBRACK expression COLON expression RSQBRACK
    (47) expression -> . identifier LSQBRACK COLON expression RSQBRACK
    (48) expression -> . identifier LSQBRACK expression COLON RSQBRACK
    (49) expression -> . identifier LSQBRACK COLON RSQBRACK
    (51) expression -> . identifier EQUALS assignable STMT_END
    (55) expression -> . expression IN expression
    (56) expression -> . expression NOT IN expression
    (64) expression -> . identifier DOUBLE_PLUS
    (65) expression -> . identifier DOUBLE_MINUS
    (66) expression -> . primitive
    (67) expression -> . STRING
    (68) expression -> . identifier
    (77) expression -> . identifier LPAREN arguments RPAREN
    (6) identifier -> . IDENTIFIER
    (8) primitive -> . NUM_INT
    (9) primitive -> . NUM_FLOAT
    (10) primitive -> . STRING
    (11) primitive -> . boolean
    (23) boolean -> . expression EQ expression
    (24) boolean -> . expression NEQ expression
    (25) boolean -> . expression GT expression
    (26) boolean -> . expression GTE expression
    (27) boolean -> . expression LT expression
    (28) boolean -> . expression LTE expression
    (29) boolean -> . expression AND expression
    (30) boolean -> . expression OR expression
    (36) boolean -> . TRUE
    (37) boolean -> . FALSE

    RSQBRACK        reduce using rule 42 (arguments -> .)
    COMMA           reduce using rule 42 (arguments -> .)
    MINUS           shift and go to state 16
    PLUS            shift and go to state 15
    BIT_NEG         shift and go to state 17
    NOT             shift and go to state 18
    LPAREN          shift and go to state 12
    LSQBRACK        shift and go to state 7
    STRING          shift and go to state 20
    IDENTIFIER      shift and go to state 14
    NUM_INT         shift and go to state 22
    NUM_FLOAT       shift and go to state 23
    TRUE            shift and go to state 25
    FALSE           shift and go to state 26

    arguments                      shift and go to state 62
    expression                     shift and go to state 63
    identifier                     shift and go to state 64
    primitive                      shift and go to state 19
    boolean                        shift and go to state 24

state 8
